# pkl

./: CPPLINT.cfg  README.md
.circleci/: config.yml
benchmark/arduino/: platformio.ini
benchmark/arduino/src/: BenchTimer.h  benchmark_constants.cpp  main.cpp
benchmark/kdl/: CMakeLists.txt  benchmark_main.cpp  constants.cpp  constants.hpp  forward.cpp  inverse.cpp  jacobian.cpp
config/: FindEigen3.cmake
docker/: Dockerfile_arch_gcc  Dockerfile_arduino_gcc  Dockerfile_ubuntu_clang  Dockerfile_ubuntu_gcc
kdl_wrapper/: CMakeLists.txt  chainiksolvervel_pinv.hpp  converter.hpp
kdl_wrapper/tests/: CMakeLists.txt  kdl_wrapper_test.cpp
pkl/: CMakeLists.txt  library.json
pkl/config/: pklConfig.cmake.in  pklConfigVersion.cmake.in
pkl/include/pkl/: chain.hpp  chain.inl  dual_quaternion.hpp  homogeneous.hpp  joint.hpp  joint_default_impl.hpp  matrix_rp.hpp  typedef.h
pkl/src/: chain.cpp  joint_dual_quaternion.cpp  joint_homogeneous.cpp  joint_matrix_rp.cpp
pkl/tests/: CMakeLists.txt  forward_test.cpp  inverse_test.cpp  jacobian_test.cpp  user_impl_test.cpp  utils.cpp  utils.hpp
